<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".bigpicture.PreviewActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/toolbarBackground"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/bianji"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/preview_text_style"
            android:text="@string/button1" />

        <TextView
            android:id="@+id/caijian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/preview_text_style"
            android:text="@string/caijian" />

        <TextView
            android:id="@+id/tuya"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/preview_text_style"
            android:text="@string/tuya" />

        <TextView
            android:id="@+id/huaban"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/preview_text_style"
            android:text="@string/button3"
            android:textColor="@color/light_gray" />
    </LinearLayout>


</RelativeLayout>