<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".BigPicture.Main2Activity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPage"
        android:background="@android:color/black"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/text"
            android:text="未来填写时间的"
            android:textColor="#eeeeee"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="Suspicious0dp"
                android:background="#000000"
                android:layout_weight="0.5"
                android:scaleType="center"
                android:textColor="#ffffff"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="Suspicious0dp"
                android:background="#000000"
                android:layout_weight="0.5"
                android:scaleType="center"
                android:textColor="#ffffff"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/button2"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="Suspicious0dp"
                android:scaleType="center"
                android:background="#000000"
                android:layout_weight="0.5"
                android:text="@string/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#FA1908"/>
            <Button
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                tools:ignore="Suspicious0dp"
                android:scaleType="center"
                android:background="#000000"
                android:layout_weight="0.5"
                android:text="分享"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#FA1908"/>

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>